Fix header spacing

--- a/assets/sass/Components/_header.scss
+++ b/assets/sass/Components/_header.scss
@@ -5,7 +5,7 @@
   line-height: initial;
   padding: 1rem;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     padding: 1rem 2rem;
   }
 
